# YT2A

./: README.md  main.py  pyproject.toml
Backend/: Dockerfile  README.md  pyproject.toml
Backend/ML/: main.py  setup.py
Backend/ML/src/youtube2text/: youtube2text.py
Backend/app/: config.py  main.py
Backend/app/api/: contract.py  endpoints.py
Backend/app/core/timestamp/: model.py  service.py
Backend/app/core/video/: model.py  service.py
Backend/app/service/: main.py  settings.py  timestamp.py  video.py
Backend/config/: debug.env  docker.env
ML/: __init__.py  main.py
ML/src/youtube2text/: youtube2text.py
ML/yt2t/: __init__.py  main.py
TelegramBot/: main.py
yt2t/: main.py
