[tool.poetry]
name = "Backend"
version = "0.1.0"
description = ""
authors = ["Roman Neronov <roman.nieronov@mail.ru>", "Ivan Platonov <platonov.ivan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "<= 1.21.5"
pydub = "^0.25.1"
SpeechRecognition = "^3.8.1"
pandas = "^1.1.5"
ffmpeg-python = "^0.2.0"
soundfile = "<= 0.10.3post1"
pytube = {git = "https://github.com/RomiconEZ/pytube-double-fixed-LIOCOCN.git"}
fastapi = "^0.97.0"
pydantic = "^1.10.9"
langdetect = "^1.0.9"
youtube-dl = "^2021.12.17"
openai = "^0.27.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

